--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
         "db": "npx json-server db.json -m ./node_modules/json-server-auth"
     },
     "dependencies": {
+        "axios": "^1.7.2",
+        "json-server": "^0.17.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "json-server": "^0.17.4"
+        "react-hook-form": "^7.52.0",
+        "react-router-dom": "^6.24.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
@@ -24,8 +27,8 @@
         "eslint": "^8.57.0",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
+        "json-server-auth": "^2.1.0",
         "typescript": "^5.2.2",
-        "vite": "^5.3.1",
-        "json-server-auth": "^2.1.0"
+        "vite": "^5.3.1"
     }
 }
